--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,16 +13,16 @@
         <h1> Benvinguts a la nostra pàgina </h1>
         <nav id="menu">
             <ul>
-                <li><a href="#">Inici</a></li>
-                <li><a href="#">Fruites</a></li>
-                <li><a href="#">Noticies</a></li>
-                <li><a href="#">Contacte</a></li>
+                <li><a href="#intro">Inici</a></li>
+                <li><a href="#hola">Fruites</a></li>
+                <li><a href="#taula1">Noticies</a></li>
+                <li><a href="#foot">Contacte</a></li>
             </ul>
 
         </nav>
     </header>
     <div class="cos">
-        <div class="intro">
+        <div class="intro" id="intro">
             <p>Se denomina fruta a aquellos frutos comestibles obtenidos de plantas cultivadas o silvestres que, por su
                 sabor generalmente dulce-acidulado, su aroma intenso y agradable y sus propiedades nutritivas, suelen
                 consumirse mayormente en su estado fresco, como jugo o como postre (y en menor medida, en otras
@@ -41,13 +42,17 @@
 
         </div>
         <div id="hola">
-            <p>Se denomina fruta a aquellos frutos comestibles obtenidos de plantas cultivadas o silvestres que, por su
+            <p>HOLA CRISTINA sSe denomina fruta a aquellos frutos comestibles obtenidos de plantas cultivadas o silvestres que, por su
                 sabor generalmente dulce-acidulado, su aroma intenso y agradable y sus propiedades nutritivas, suelen
                 consumirse mayormente en su estado fresco, como jugo o como postre (y en menor medida, en otras
                 preparaciones), una vez alcanzada la madurez organoléptica, o luego de ser sometidos a cocción.</p>
-
-
+                <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe><iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe><iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
         </div>
+
+
         <div id="taula1">
             <table>
                 <tr>
@@ -66,7 +71,7 @@
                     <td>Poma Golden</td>
                     <td>Golmés</td>
                     <td>La millor poma golden del Plà d'Urgell</td>
-                    <td><img src="assets/img/greenapple.jpg" alt="" height="50px" width="50px" ></td>
+                    <td><img src="assets/img/greenapple.jpg" alt="" height="50px" width="50px"></td>
                 </tr>
                 <tr>
                     <td>Pera llimonera</td>
@@ -77,6 +82,15 @@
             </table>
         </div>
     </div>
+
+    <footer class="foot" id="foot">
+        <h2>Info</h2>
+        <ul>
+            <li>info1</li>
+            <li>info2</li>
+            <li>info3</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
